<resources>
    <string name="facebook_app_id">1427237490693315</string>
    <string name="fb_login_protocol_scheme">fb1427237490693315</string>

    <string name="app_name">CityGuide</string>
    <string name="title_activity_maps">CityGuide</string>
    <string name="title_activity_main">Near me</string>
    <string name="title_activity_build">Settings</string>
    <string name="title_activity_cities">Cities</string>
    <string name="title_qr_activity">QR reader</string>


    <string name="drawer_map">Map</string>
    <string name="drawer_near_me">Near me</string>
    <string name="drawer_about">Settings</string>
    <string name="drawer_auth">My account</string>
    <string name="drawer_cities">Cities</string>
    <string name="drawer_trips">Trips</string>
    <string name="drawer_qr">QR Reader</string>

    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>


    <string name="onboarding_1_title">Hello</string>
    <string name="onboarding_1_description">CityGuide helps you to find interest objects near you</string>

    <string name="onboarding_2_title">Show nearest</string>
    <string name="onboarding_2_description">POIs and get push notifications</string>

    <string name="onboarding_3_title">Scan QR code</string>
    <string name="onboarding_3_description">scan qr code by camera and get information about sight</string>

    <string name="onboarding_4_title">We need some permissions</string>
    <string name="onboarding_4_description">To show nearest POIs and find by QR code. Please click allow on the next slide</string>

    <string name="onboarding_5_title">Work in offline</string>
    <string name="onboarding_5_description">App is work in offline. However if you want to fully disable internet, you should download map in Google Maps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Title</string>
    <string name="description">Description</string>
    <string name="add_image">addImage</string>
    <string name="delete_image">deleteImage</string>
    <string name="thumbnail">thumbnail</string>

    <string name="settings_fragment_build_header">Build</string>
    <string name="auth_fragment_header">Account</string>
    <string name="settings_fragment_features_header">Features</string>
    <string name="settings_fragment_stats_header">Stats</string>
    <string name="settings_fragment_time">Time: </string>
    <string name="settings_fragment_poi_offline">Poi offline: </string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="auth">My account</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>

    <string name="load">Load</string>
    <string name="loaded">Loaded</string>
    <string name="toload">To Download</string>
    <string name="all">All</string>
    <string name="load_or_update">Download\\Update</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>

    <string name="empty_search">Oh!\nUnfortunately, no results were found.</string>
    <string name="only_online">Sorry!\nThis feature is available only in online mode.\nPlease, turn of "Downloaded only" mode and restart the app.</string>

    <string name="track_me">Send pushes</string>
    <string name="downloaded_only">Downloaded only</string>
    <string name="enable_experimental_feature">Enable experimental feature</string>

    <string name="on_map">On map</string>
    <string name="wrong_qrcode">This URL is uncorrect.\nPlease retry.</string>
    <string name="retry">Retry</string>
    <string name="auth_your_name">Your name: </string>
    <string name="git">Git:</string>
</resources>
