<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_discard"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/load"
        android:icon="@drawable/ic_download"
        android:title="@string/load_or_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/selectAll"
        android:icon="@drawable/ic_download"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/deselectAll"
        android:icon="@drawable/ic_download"
        android:title="@string/deselect_all"
        app:showAsAction="never" />
</menu>