<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/Location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.02"
                        android:text="TextView"
                        android:visibility="gone" />

                    <!--<TextView-->
                    <!--android:id="@+id/PlaceName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="0.06"-->
                    <!--android:text="TextView"-->
                    <!--android:visibility="invisible" />-->

                    <RelativeLayout
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/PoiImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:visibility="invisible"
                            app:srcCompat="@android:drawable/ic_menu_report_image" />

                        <LinearLayout
                            android:id="@+id/btnMap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:background="@color/zxing_transparent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@drawable/button_back"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@color/zxing_transparent"
                                    android:src="@drawable/ic_place_black_24dp"
                                    android:tint="@color/colorPrimary" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/on_map"
                                    android:textColor="@color/colorPrimaryDark" />

                            </LinearLayout>
                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/PoiDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.32"
                        android:background="@color/white"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:visibility="invisible" />
                </LinearLayout>
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/empty">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:tint="@color/grey_500"
                    android:src="@drawable/icon_oops"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong_qrcode"/>
                <Button
                    android:id="@+id/btnRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_back"
                    android:text="@string/retry"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/grey_500"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/nav_drwr_fragment"
        android:name="ru.nbakaev.cityguide.ui.navigationdrawer.NavigationDrawerFragment"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>





